// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a forbidClick toast 1`] = `
<div class="ghb-toast ghb-toast--middle ghb-toast--success" style="z-index: 2001;" name="ghb-fade"><i class="ghb-icon ghb-icon-success ghb-toast__icon">
    <!----></i></div>
`;

exports[`icon prop 1`] = `
<div class="ghb-toast ghb-toast--middle" style="z-index: 2005;" name="ghb-fade"><i class="ghb-icon ghb-icon-star-o ghb-toast__icon">
    <!----></i>
  <div class="ghb-toast__text">Message</div>
</div>
`;

exports[`icon-prefix prop 1`] = `
<div class="ghb-toast ghb-toast--middle" style="z-index: 2006;" name="ghb-fade"><i class="my-icon my-icon-star-o ghb-toast__icon">
    <!----></i>
  <div class="ghb-toast__text">Message</div>
</div>
`;

exports[`show html toast 1`] = `
<div class="ghb-toast ghb-toast--middle ghb-toast--html" style="z-index: 2004;" name="ghb-fade">
  <div class="ghb-toast__text">
    <div>Message</div>
  </div>
</div>
`;

exports[`show loading toast 1`] = `
<div class="ghb-toast ghb-toast--middle ghb-toast--loading" style="z-index: 2003;" name="ghb-fade">
  <div class="ghb-loading ghb-loading--circular ghb-toast__loading"><span class="ghb-loading__spinner ghb-loading__spinner--circular"><svg viewBox="25 25 50 50" class="ghb-loading__circular"><circle cx="50" cy="50" r="20" fill="none"></circle></svg></span></div>
  <div class="ghb-toast__text">Message</div>
</div>
`;
